deployment/manifests/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nmp-wt
  labels:
    istio-injection: enabled
