deployment/manifests/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: nmp-wt
  name: nmp-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http-wan
        protocol: HTTP
      hosts:
        - "nmp.domain.com"
